--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -1,29 +1,18 @@
 {
   "name": "lab-08",
   "version": "1.0.0",
-  "description": "As we now complete our MVC conversation, we can refactor our app to use good MVC separation of concerns.",
+  "description": "lab-08",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "Code Fellows",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "express": "^4.13.3",
     "body-parser": "^1.15.2",
-    "express": "^4.14.1",
     "pg": "^6.1.2"
   },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nomadik223/08-SQL-introduction.git"
-  },
-  "keywords": [
-    "lab-08"
-  ],
-  "bugs": {
-    "url": "https://github.com/nomadik223/08-SQL-introduction/issues"
-  },
-  "homepage": "https://github.com/nomadik223/08-SQL-introduction#readme"
+  "devDependencies": {}
 }
